# CoBaLI

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md  Report.md  requirements-dev.txt  requirements.txt
benchmarks/: run_baseline.py
configs/: baseline_config.yaml  benchmark_config.yaml  cobali_config.yaml
docs/: 01_design_overview.md  02_baseline_implementation.md  03_continuous_batching.md  04_prefill_splitting.md
examples/cpp/: CMakeLists.txt  baseline_inference.cpp  continuous_batching.cpp  full_cobali.cpp
include/cobali/: api.hpp
include/cobali/baseline/: sequential_engine.h
include/cobali/common/: config.h  types.h  utils.h
include/cobali/engine/: cobali_engine.h  executor.h
include/cobali/memory/: kv_cache_manager.h
include/cobali/scheduler/: batch_manager.h  continuous_batcher.h  prefill_splitter.h  request_queue.h
models/: README.md
profiler/: cobali_full_profile_128_chunk128_20251118_172123.txt  cobali_full_profile_128_chunk128_20251118_181026.txt  cobali_full_profile_128_chunk128_20251118_182626.txt  cobali_long_32_full_profile_128_chunk128_20251118_185458.txt  nsys_eval.py  profiler.sh
scripts/: build.sh  build_cpp.sh  download_model.sh  profiler.sh  run_cb.sh  run_seq.sh  setup.sh  setup_submodule.sh
src/: main.cpp
src/baseline/: sequential_engine.cpp
src/common/: utils.cpp
src/cuda/: batcher.cu  batcher.cuh
src/engine/: cobali_engine.cpp  executor.cpp
src/host/: engine.cpp  engine.hpp  main.cpp
src/memory/: kv_cache_manager.cpp
src/scheduler/: batch_manager.cpp  continuous_batcher.cpp  prefill_splitter.cpp  request_queue.cpp
tests/cpp/: CMakeLists.txt  test_batch_manager.cpp  test_kv_cache.cpp  test_prefill_splitter.cpp  test_request_queue.cpp
workloads/: inference_prompts_inline.txt  inference_prompts_inline_short_100.txt  inference_prompts_inline_short_2000.txt  inference_prompts_inline_short_50.txt  prompts_100minwords_200.txt  prompts_16.txt  prompts_200.txt  prompts_2000minwords_200.txt  prompts_8.txt  prompts_long.txt  prompts_short.txt  prompts_short_100minwords_200.txt  prompts_short_2000minwords_200.txt  prompts_short_50minwords_200.txt  prompts_very_long.txt  prompts_very_long_2000.txt  prompts_very_long_32.txt  scenarios.yaml
